# adam

./: #.gitignore  .clippy.toml  .dockerignore  .env.example  .flake8  .gitignore  .gitmodules  =1.39.0  =13  =4.10.0  AGENTS.md  AGENT_CATALOG.md  Adam v19.1 System Management and Optimization Guide.md  Architectural_Changelog.md  Architectural_Review_Refined.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.core  Dockerfile.kernel  Dockerfile.modern  Dockerfile.swarm  LLM_README.md  MANIFEST.in  MEMORY.md  Makefile  PROPOSAL_PROJECT_SINGULARITY.md  PRUNE_PROMPT.md  Phase_4_Architectural_Reality_Check.md  README.md  README_EXTENSIONS.md  ROADMAP_AGENTS_EXPANSION.md  ROADMAP_AGENTS_EXPANSION_V23.md  RemediationPlan.json  SECURITY.md  UI Mockups.md  UI-Mockups.md  VERSIONING.md  (+110 more)
.Jules/: palette.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.jules/: async_agent_meta_log.md  bolt.md  ecosystem_upgrade.md  jules.md  learnings.md  memory.md  notes.md  palette.md  sentinel.md
adam-os/: README.md  package.json  tsconfig.json
adam_finance/: README.md  icat.py  icat_schema.py  math.py  valuation.py
adam_governance/: README.md  state_control.py
adam_graph/: README.md  workflow.py
adam_interfaces/: README.md  interfaces.py  protocols.py
adam_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adam_swarm/: README.md  orchestrator.py
adam_v21_upgrade/: Adam_v21_Pipeline_Runner.ipynb  README.md
adam_v24/: README.md  index.html
architect_output/: daily-build-2026-apr-03-12-57-20.md  daily-build-2026-apr-05-12-41-45.md  daily-build-2026-apr-07-12-54-03.md  daily-build-2026-apr-07-13-05-45.md  daily-build-2026-apr-08-12-39-46.md  daily-build-2026-mar-01-14-15-19.md  daily-build-2026-mar-03-14-14-54.md  daily-build-2026-mar-07-13-35-52.md
architecture/: ADAM_OS_BLUEPRINT.md  SYSTEM_ARCHITECTURE.md  index.html
archive/: fix_cross_links.py  fix_lint_3.sh  fix_other_indexes.py  index.html  index23.html  index3.html  patch_js2.py  patch_js4.py  patch_orchestrator.py  readme.html  requirements21.txt  teacher_student.jsonl  update_script_2.py  verify_portfolio.py
artifacts/: directory_manifest.jsonld  index.html
assets/: README.md  credit_risk_controller_prompt.md  prompt_loader.py  prompts.json
backend/: Dockerfile  README.md  api.py  app_plugin_scaffold.py  controller.py  eval_harness.py  index.html  requirements.txt
backend/core_engine/: Cargo.toml  Dockerfile  build.rs  index.html  unified_ledger.sql
backend/core_engine/migrations/: index.html  init.sql
backend/core_engine/src/: index.html  main.rs  orderbook.rs
chatbot/: index.html
chatbot-ui/: index.html  script.js  style.css
config/: AGENTS.md  AWO_System_Prompt.md  Adam_v22.0_Portable_Config.json  Adam_v23.5_Portable_Config.json  Adam_v25.5_Portable_Config.json  Adam_v25.5_v2.0_Portable_Config.json  Cloud_Aware_Config_2.json  README.md  agents.yaml  analysis_modules.yaml  api.yaml  api_keys.yaml  black_swan_scenarios.yaml  cacm-adk-config.yaml  config.yaml  data_sources.yaml  errors.yaml  example_config.yaml  governance_policy.yaml  index.html  knowledge_graph.yaml  knowledge_graph_schema.yaml  llm_plugin.yaml  logging.yaml  logging_schema_v22.json  market_mayhem_config.yaml  newsletter_layout.yaml  report_layout.yaml  reporting.yaml  semantic_kernel_settings.yaml  settings.yaml  swarm_runtime_setup.yaml  system.yaml  workflow.yaml  workflow21.yaml
core/: AGENTS.md  README.md  api.py  api_wrapper.py  core_types.py  directory_manifest.jsonld  human_validation_gate.py  index.html  llm_plugin.py  main.py  memory_ingestion_pipeline.py  ppo_trainer.py  rag_reranking.py  schema_middleware.py  settings.py
core/experimental/adamos_kernel/: Cargo.toml  README.md  build.sh
core/experimental/adamos_kernel/src/: lib.rs
daily_ritual/: CHANGELOG.md  daily_ritual.py
data/: 10k_sample_aapl.txt  10k_sample_amzn.txt  10k_sample_googl.txt  10k_sample_gs.txt  10k_sample_jpm.txt  10k_sample_meta.txt  10k_sample_msft.txt  10k_sample_nflx.txt  10k_sample_nvda.txt  10k_sample_tsla.txt  AGENTS.md  CACM-SaaS_DefaultRisk_v1.jsonld  DATA_NAVIGATION.md  adam_market_baseline.json  adam_v23_5_update.jsonl  adam_v23_market_baseline.json  adam_v26_market_baseline.json  analyst_os_demo_data.json  audit_log.jsonl  clo_analyzer.csv  clo_analyzer.xlsx  company_data_expanded.json  compliance_learned_profile.json  context_definition.jsonld  conviction_list.jsonl  credit_rating_decision_tree_v3.json  dcf_model_template.csv  deal_template.json  deep_dive_reports.json  ev_model_template.csv  example_user_portfolio.json  example_user_profile.json  fibo_knowledge_graph_schema.json  finance_bench.json  global_risk_appetite_barometer_20250224.csv  historical_market_data.json  index.html  knowledge_base.json  knowledge_base_v2.json  knowledge_graph.json  (+25 more)
docs/: 01_master_prompt.md  AGENTS.md  AGENTS_GOVERNANCE.md  AGENTS_GUIDE.md  AGENTS_KNOWLEDGE_BASE.md  AGENT_CREATION.md  AGENT_PATTERNS.md  AI_Credit_Workflow_Orchestration_Report.md  ALPHABET_ECOSYSTEM_INTEGRATION.md  APEX_ARCHITECT_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  AST_Dependency_Map.json  Adam v19.2 Mapping Document.docx  Adam v21.0 Mapping Document.txt  Adam v21.0 system prompt.txt  Architectural_Changelog.md  Architectural_Report.md  Conceptual CACM-ADK System Architecture (Mermaid Syntax).md  DEVELOPMENT_BEST_PRACTICES.md  DISCLAIMERS_AND_ASSUMPTIONS.md  DYNAMIC_DATA_GUIDE.md  Dependency_Map.md  Federated Learning Model Setup Guide.md  LAYERS.md  (+96 more)
ufos/rust_core/: Cargo.toml  README.md  index.html
ufos/rust_core/src/: index.html  lib.rs  main.rs
ufos/rust_core/src/bridge/: index.html  mod.rs
ufos/rust_core/src/execution/: index.html  matching_engine.rs  mod.rs  orderbook.rs
ufos/rust_core/src/mcp/: index.html  mod.rs  resources.rs  server.rs  tools.rs
ufos/rust_core/src/memory/: index.html  mod.rs
ufos/rust_core/src/networking/: index.html  mod.rs
ufos/rust_core/src/risk/: index.html  mod.rs
ufos/rust_core/src/strategy/: index.html  mod.rs
(+5613 files in other folders)
