[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adam-project"
version = "23.5.0"
description = "Adam: Autonomous Financial Analyst Agent Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ADAM", email = "adamvangrover@gmail.com" },
    { name = "ADAM Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.dependencies]
fastmcp = "*"
pydantic = "^2.0"
json-logic = "*"
qiskit = "*"
qiskit-finance = "*"
qiskit-aer = "*"
pandas = "*"
numpy = "*"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "src*"]

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    ".", "core"
]
