[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adam-project"
version = "23.5.0"
description = "Adam: Autonomous Financial Analyst Agent Platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "ADAM", email = "adamvangrover@gmail.com" },
    { name = "ADAM Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "src*"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
# E: pycodestyle
# F: Pyflakes
# I: isort
# B: flake8-bugbear
# ANN: flake8-annotations (strict typing for robust financial logic)
# C90: mccabe complexity (enforces deterministic execution paths)
# N: pep8-naming
# UP: pyupgrade
select = ["E", "F", "I", "B", "ANN", "C90", "N", "UP", "RUF"]

# Ignore missing type annotations for 'self' and 'cls' as they are redundant
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.mccabe]
# Keep cognitive complexity strictly capped to ensure PROV-O traceability
max-complexity = 10

[tool.ruff.lint.isort]
# Organize first-party imports cleanly across the multi-agent ecosystem
known-first-party = ["adam", "nexus", "sentinel", "odyssey", "bolt"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    ".", "core"
]
