[package]
name = "adamos_kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
wasm-bindgen = "0.2"
